# mkdocs-gherkin-plugin

./: .gitignore  README.md  makefile  pyproject.toml  requirements.txt  setup.py
example/: mkdocs.yml  package-lock.json  package.json  run.py
example/docs/: classic.feature.md  screenshot.feature.md  undefined.feature.md
example/tests/: cucumber.js
example/tests/steps/: steps.js
mkdocs_gherkin_plugin/: __init__.py  gherkin_plugin.py  gherkin_results.py  gherkin_step.py  gherkin_test_case.py  status_formatter.py
tests/: test_case_status_test.py
tests/test-docs/: cucumber.js  gherkin_messages.ndjson  mkdocs.yml  package.json
tests/test-docs/docs/: image.feature.md  my.feature.md
tests/test-docs/steps/: steps.js
